[gd_scene load_steps=4 format=3 uid="uid://c2gocuhw2o7py"]

[ext_resource type="PackedScene" uid="uid://dt2hleulx4ghr" path="res://scenes/menu/menu_bg.tscn" id="2_y1o0p"]
[ext_resource type="FontFile" uid="uid://da2t6lyf41wty" path="res://assets/fonts/open-sans/open-sans-bold.ttf" id="4"]
[ext_resource type="Script" uid="uid://cvc42inud8fxx" path="res://scenes/menu/menu.gd" id="5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")

[node name="ColorRect" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="ColorRect"]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="menu_background" parent="ColorRect/SubViewport" instance=ExtResource("2_y1o0p")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_right = -8.0
offset_bottom = -339.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MarginContainer/Control/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 60
text = "The Dollhouse"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -30.0
offset_right = 96.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
text = "START"

[node name="CreditsButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
text = "CREDITS"

[node name="ExitButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
text = "EXIT"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="MarginContainer/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
